--- a/app/globals.css
+++ b/app/globals.css
@@ -2,4 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+    .bento {
+      @apply bg-beige-background rounded-2xl;
+    }
+  }
+
 
